# SciVis_2025

./: .gitignore  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: drawitem.h  quadmesh.h  shader.h  trackball.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: drawitem.cpp  main.cpp  quadmesh.cpp  shader.cpp  trackball.cpp
